Adds usernames, minor refactoring

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
   php:
     build: "./ws"
     restart: unless-stopped
+    volumes:
+      - "./ws:/var/www/ws"
     ports:
       - "9502:9502"
