--- a/ws/composer.json
+++ b/ws/composer.json
@@ -7,6 +7,11 @@
       "CursorParty\\": "src/"
     }
   },
+  "scripts": {
+    "test": "php vendor/bin/phpunit",
+    "format": "php vendor/bin/pint --preset psr12",
+    "analyse": "php vendor/bin/phpstan"
+  },
   "require": {
     "php": ">=8.1",
     "monolog/monolog": "^3.5",
